--- a/Kubmill/App.xaml
+++ b/Kubmill/App.xaml
@@ -11,6 +11,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemesDictionary Theme="Light" />
                 <ui:ControlsDictionary />
+                <ResourceDictionary Source="pack://application:,,,/Wpf.UI;component/Styles/Assets/StaticColors.xaml"/>
                 <ResourceDictionary Source="/Styles/Colors.xaml"/>
                 <ResourceDictionary Source="/Styles/Converters.xaml"/>
                 <ResourceDictionary Source="/Styles/DataGridStyles.xaml"/>
